# moongenesis

./: .gitignore  .gitmodules  LICENSE  License.txt  README.md  build.gradle  local.properties  settings.gradle
Client/Android/: show-android-commands.sh
Client/Android/AndroidBootstrap/: build.gradle
Client/Android/AndroidGraphics/: build.gradle
Client/Desktop/DesktopBootstrap/: build.gradle
Client/Desktop/DesktopGraphics/: build.gradle
Client/Desktop/DesktopInput/: README  build.gradle
Client/NativeDesktop/NativeDesktopGraphics/: .gitignore  CMakeLists.txt  NativeDesktopGraphics.files  NativeDesktopGraphics.includes  README.md  build.sh
Client/NativeDesktop/NativeDesktopGraphics/Window/: CMakeLists.txt  DefaultNativeWindow.cpp  DefaultNativeWindow.h  mainwindow.cpp  mainwindow.ui  moc_mainwindow.cpp
Client/NativeDesktop/NativeDesktopGraphics/bootstrap/: CMakeLists.txt  NativeDesktopGraphicsBoot  README.md  boot.cpp
Client/NativeDesktop/NativeDesktopGraphics/libWindow/: CMakeLists.txt
MoonGenesis/Core/CLI/: build.gradle
MoonGenesis/Tooling/CLI/: build.gradle
SampleGame/: README.md  build.gradle
SampleGame/Android/: build.gradle
SampleGame/SampleDesktop/: build.gradle
Samples/my-first-game/: build.gradle
Samples/my-first-game/scenes/: main-scene.json
Service/GameStateService/: project-bash.sh  project-subl.sh
Service/ResourceService/: README.md
config/gradle/: LICENSE  README.md  groovy-conventions.gradle
config/gradle/includes/: swt-conventions.gradle
gradle/wrapper/: gradle-wrapper.properties
(+84 files in other folders)
